<resources>
    <string name="app_name">Weather</string>
    <string name="city">Select city</string>
    <string name="today">Today</string>
    <string name="temp">0,0</string>
    <string name="temp_unit">℃</string>
    <string name="weather_text">Weather</string>
    <string name="wind_direction"></string>
    <string name="wind">Wind</string>
    <string name="wind_speed">0,0</string>
    <string name="wind_speed_unit">m/s</string>
    <string name="pressure_label">Pressure</string>
    <string name="pressure">0,00</string>
    <string name="pressure_uint">HPa</string>
    <string name="humidity_label">Humidity</string>
    <string name="humidity">0,0</string>
    <string name="humidity_unit">%</string>

    <string name="n">N</string>
    <string name="nne">NNE</string>
    <string name="ne">NE</string>
    <string name="ene">ENE</string>
    <string name="e">E</string>
    <string name="ese">ESE</string>
    <string name="se">SE</string>
    <string name="sse">SSE</string>
    <string name="s">S</string>
    <string name="ssw">SSW</string>
    <string name="sw">SW</string>
    <string name="wsw">WSW</string>
    <string name="w">W</string>
    <string name="wnw">WNW</string>
    <string name="nw">NW</string>
    <string name="nnw">NNW</string>
</resources>
