<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date"
            android:text="@string/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/weather_text"
            android:text="@string/weather_text"
            android:layout_below="@id/date"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/temp"
            android:text="@string/temp"
            android:layout_toRightOf="@id/weather_text"
            android:layout_below="@id/date"
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/temp_unit"
            android:text="@string/temp_unit"
            android:layout_toRightOf="@id/temp"
            android:layout_below="@id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wind_label"
            android:text="@string/wind"
            android:layout_below="@id/weather_text"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wind_direction"
            android:text="@string/wind_direction"
            android:layout_below="@id/weather_text"
            android:layout_toRightOf="@id/wind_label"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wind_speed"
            android:text="@string/wind_speed"
            android:layout_marginRight="4dp"
            android:layout_below="@id/weather_text"
            android:layout_toRightOf="@id/wind_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wind_speed_unit"
            android:text="@string/wind_speed_unit"
            android:layout_below="@id/weather_text"
            android:layout_toRightOf="@id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/pressure_label"
            android:text="@string/pressure_label"
            android:layout_below="@id/wind_label"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/pressure"
            android:text="@string/pressure"
            android:layout_marginRight="4dp"
            android:layout_below="@id/wind_label"
            android:layout_toRightOf="@id/pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/pressure_unit"
            android:text="@string/pressure_uint"
            android:layout_below="@id/wind_label"
            android:layout_toRightOf="@id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/humidity_label"
            android:text="@string/humidity_label"
            android:layout_below="@id/pressure"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/humidity"
            android:text="@string/humidity"
            android:layout_marginRight="4dp"
            android:layout_below="@id/pressure"
            android:layout_toRightOf="@id/humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/humidity_unit"
            android:text="@string/humidity_unit"
            android:layout_below="@id/pressure"
            android:layout_toRightOf="@id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/weather_image"
            android:src="@drawable/d_01_clear_sky"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
