<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="weather"
                type="com.example.weather.weather_by_week.WeatherViewModel" />

    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".common.MainActivity">

        <RelativeLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/colorTop" >

            <AutoCompleteTextView
                    android:id="@+id/city"
                    android:inputType="textPersonName"
                    android:text="@{weather.city}"
                    android:hint="@string/city"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/date"
                    android:text="@string/today"
                    android:layout_below="@id/city"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/curent_date"
                    android:text="@{weather.printDate()}"
                    android:layout_below="@id/city"
                    android:layout_toRightOf="@id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/weather_text"
                    android:text="@{weather.weather, default=@string/weather_text}"
                    android:layout_below="@id/date"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/temp"
                    android:text='@{String.format("%.2f", weather.temp), default=@string/temp}'
                    android:layout_toRightOf="@id/weather_text"
                    android:layout_below="@id/date"
                    android:layout_marginRight="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/temp_unit"
                    android:text="@string/temp_unit"
                    android:layout_toRightOf="@id/temp"
                    android:layout_below="@id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/wind_label"
                    android:text="@string/wind"
                    android:layout_below="@id/weather_text"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/wind_direction"
                    android:text="@{weather.windDirection, default=@string/wind_direction}"
                    android:layout_below="@id/weather_text"
                    android:layout_toRightOf="@id/wind_label"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/wind_speed"
                    android:text="@{Double.toString(weather.windSpeed), default=@string/wind_speed}"
                    android:layout_marginRight="4dp"
                    android:layout_below="@id/weather_text"
                    android:layout_toRightOf="@id/wind_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/wind_speed_unit"
                    android:text="@string/wind_speed_unit"
                    android:layout_below="@id/weather_text"
                    android:layout_toRightOf="@id/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/pressure_label"
                    android:text="@string/pressure_label"
                    android:layout_below="@id/wind_label"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/pressure"
                    android:text="@{Double.toString(weather.pressure), default=@string/pressure}"
                    android:layout_marginRight="4dp"
                    android:layout_below="@id/wind_label"
                    android:layout_toRightOf="@id/pressure_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/pressure_unit"
                    android:text="@string/pressure_uint"
                    android:layout_below="@id/wind_label"
                    android:layout_toRightOf="@id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/humidity_label"
                    android:text="@string/humidity_label"
                    android:layout_below="@id/pressure"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/humidity"
                    android:text="@{Double.toString(weather.humidity), default=@string/humidity}"
                    android:layout_marginRight="4dp"
                    android:layout_below="@id/pressure"
                    android:layout_toRightOf="@id/humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/humidity_unit"
                    android:text="@string/humidity_unit"
                    android:layout_below="@id/pressure"
                    android:layout_toRightOf="@id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <ImageView
                    android:id="@+id/weather_image"
                    android:src="@{weather.weatherIcon, default=@drawable/d_01_clear_sky}"
                    android:layout_below="@id/city"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weather_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                android:layout_weight="1"
                android:background="@color/colorBackground" />

    </LinearLayout>
</layout>